# AaltoSPGW

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  README.old.md  aclocal.m4  config.status  configure  configure.ac  depcomp  nwepc.doxyfile
common/: NwError.h  NwEvt.h  NwLog.h  NwMem.c  NwMem.h  NwTypes.h  NwUtils.h
doc/: ARCHITECTURE.md
init/: pgw.cfg.template  pgw.iproute2.start  pgw.iproute2.stop  pgw.service  sgi0.netdev  sgi0.network  sgi0s.network  sgw.cfg.template  sgw.service  spgw.cfg.template  spgw.service
nw-event/: Makefile  Makefile.am  Makefile.in
nw-event/include/: NwEvent.h
nw-event/src/: Makefile  Makefile.am  Makefile.in  NwEvent.c
nw-event/test-app/: Makefile  Makefile.am  Makefile.in  event-test  event-test.c  time-test  time-test.c
nw-gre/: Makefile  Makefile.in  install-sh
nw-gre/include/: NwGreLog.h  NwGrePrivate.h  NwGreTrxn.h  NwGreTunnelEndPoint.h  (+2 more)
nw-gtpv1u/: Makefile  Makefile.am  Makefile.in
nw-gtpv2c/: Makefile  Makefile.in  README  README.md
nw-ipv4/: COPYING  Makefile  Makefile.in  depcomp
nw-mme-emu/: Makefile  Makefile.am  Makefile.in  NwMmeDpe.c  NwMmeDpe.h  NwMmeLog.h  NwMmeMain.c  NwMmeUe.c  NwMmeUe.h  NwMmeUeLog.h  NwMmeUlp.c  NwMmeUlp.h  nwLteMmeEmu
nw-sae-gw/: Makefile  Makefile.am  Makefile.in  NwSaeGwDpe.c  NwSaeGwDpe.h  NwSaeGwLog.h  NwSaeGwMain.c  NwSaeGwUe.c  NwSaeGwUe.h  NwSaeGwUeFsm.c  NwSaeGwUeFsm.h  NwSaeGwUeLog.h  NwSaeGwUeState.c  NwSaeGwUeState.h  NwSaeGwUeStateAwaitMmeDownlinkDataNt.c  NwSaeGwUeStateAwaitMmeDownlinkDataNt.h  NwSaeGwUeStateAwaitPgwCreateSessionRsp.c  NwSaeGwUeStateAwaitPgwCreateSessionRsp.h  NwSaeGwUeStateAwaitPgwDeleteSessionRsp.c  NwSaeGwUeStateAwaitPgwDeleteSessionRsp.h  NwSaeGwUeStateAwaitPgwModifyBearerRsp.c  NwSaeGwUeStateAwaitPgwModifyBearerRsp.h  NwSaeGwUeStateAwaitPgwModifyBearerRsp2.c  NwSaeGwUeStateAwaitPgwModifyBearerRsp2.h  NwSaeGwUeStateInit.c  NwSaeGwUeStateInit.h  NwSaeGwUeStatePgwSessionCreated.c  NwSaeGwUeStatePgwSessionCreated.h  NwSaeGwUeStateSaeSessionCreated.c  NwSaeGwUeStateSaeSessionCreated.h  NwSaeGwUeStateSaeSessionEstablished.c  NwSaeGwUeStateSaeSessionEstablished.h  NwSaeGwUeStateSgwSessionCreated.c  NwSaeGwUeStateSgwSessionCreated.h  NwSaeGwUeStateSgwSessionEstablished.c  NwSaeGwUeStateSgwSessionEstablished.h  NwSaeGwUlp.c  NwSaeGwUlp.h  PGW.service  SGW.service  (+3 more)
nw-sdp/: Makefile
(+266 files in other folders)
